--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flux-contacts-dashboard",
+  "name": "react-flux-address-book-dashboard",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,15 +10,20 @@
   "author": "Damon Tian",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.4",
     "firebase": "^4.1.3",
     "flux": "^3.1.2",
+    "node-sass": "^4.5.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
